@@ -12,6 +12,8 @@ package de.highbyte_le.weberknecht.request.routing;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import de.highbyte_le.weberknecht.conf.WeberknechtConf;
+
 /**
  * Implementation of the Weberknecht default routing.
  *
@@ -43,5 +45,13 @@ public class SimpleRouter implements Router {
 		}
 		
 		return target;
+	}
+
+	/* (non-Javadoc)
+	 * @see de.highbyte_le.weberknecht.request.routing.Router#setConfig(de.highbyte_le.weberknecht.conf.WeberknechtConf)
+	 */
+	@Override
+	public void setConfig(WeberknechtConf conf) {
+		//
 	}
 }
