@@ -22,6 +22,7 @@ next (1.0):
 	- syntax of weberknecht.xml changed
 	- error handlers
 	- error pages, configured via web.xml are used
+	- router interface extended by setConfig method
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
